# satsat

./: CMakeLists.txt  README.md  dimacsTest.dimacs  main.cpp  test.dimacs
Google_tests/: CMakeLists.txt  test1.cpp
Google_tests/dimacsFiles/: DimacsComments1.dimacs  DimacsComments2.dimacs  DimacsComments3.dimacs  DimacsInternalRep1.dimacs  DimacsTest1.dimacs  DimacsTest2.dimacs  DimacsThrow2.dimacs  DimacsThrow3.dimacs  DimacsThrow4.dimacs  DimacsThrow5.dimacs  DimacsThrow6.dimacs  DimacsThrow7.dimacs  DimacsThrow8.dimacs  Split1.dimacs
include/: Dimacs.h  VariableClauseRelation.h
solver/: CMakeLists.txt
solver/include/: CNFFormula.cpp  CNFFormula.h  Clause.h  Dimacs.h  DimacsFormatException.h  DimacsReader.h  Variable.h  VariableClauseRelation.h
solver/src/: CNFFormula.cpp  Clause.cpp  Dimacs.cpp  DimacsReader.cpp  Variable.cpp  VariableClauseRelation.cpp
src/: Dimacs.cpp  DimacsReader.cpp  VariableClauseRelation.cpp  main.cpp
